--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -21,3 +21,9 @@
         }
     }
 }
+
+.navbar-collapse{
+    background-color: $backColor;
+    border-radius: 5px;
+    padding: 10px;
+}
